--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
     <img src="icon.jpeg" alt="Profile Picture" class="profile-pic">
     <h1>Filipe Rosenbrock</h1>
     <p>
-      I am a Splunk Certified Administrator with over 5 years of experience in developing monitoring solutions. My expertise includes designing dashboards, configuring alerts, and generating comprehensive reports on system performance and compliance.
+      I am a Splunk Certified Administrator with over 5 years of experience in developing monitoring solutions. My expertise includes designing dashboards, configuring alerts, and generating comprehensive reports.
     </p>
     <p>
-      I am proficient in extracting and analyzing data from diverse sources, creating scripts in Python for automation and data processing, integrating with databases, and implementing version control practices with Git.
+      I am proficient in extracting and analyzing data from diverse sources, creating scripts in Python for automation and data processing, integrating with databases, and implementing version control practice.
     </p>
     <p>
-      <a href="https://www.upwork.com/freelancers/~0183391c0fd60e08f6" target="_blank">Hire me at Upwork</a>
-    </p>
-    <p>
-      <a href="https://github.com/frosenbrock" target="_blank">Visit my GitHub</a>
+      <a href="https://github.com/frosenbrock" target="_blank">Visit my GitHub</a> | <a href="https://www.upwork.com/freelancers/~0183391c0fd60e08f6" target="_blank">Hire me at Upwork</a>
     </p>
     <div class="footer">
       &copy; 2025 Filipe Rosenbrock
