--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.7);
       max-width: 400px;
+      width: 90%;
       text-align: center;
+      margin: 1rem;
     }
 
     .profile-pic {
@@ -33,7 +35,7 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       border: 2px solid #333;
     }
 
@@ -59,9 +61,16 @@
     }
 
     .footer {
-      margin-top: 1.2rem;
+      margin-top: 1.5rem;
       font-size: 0.8rem;
       color: #777;
+    }
+
+    @media (min-width: 600px) {
+      .container {
+        margin: 2rem;
+        width: auto;
+      }
     }
   </style>
 </head>
@@ -77,7 +86,8 @@
       I am proficient in extracting and analyzing data from diverse sources, creating scripts in Python for automation and data processing, integrating with databases, and implementing version control practice.
     </p>
     <p>
-      <a href="https://github.com/frosenbrock" target="_blank">Visit my GitHub</a> | <a href="https://www.upwork.com/freelancers/~0183391c0fd60e08f6" target="_blank">Hire me at Upwork</a>
+      <a href="https://github.com/frosenbrock" target="_blank">Visit my GitHub</a> | 
+      <a href="https://www.upwork.com/freelancers/~0183391c0fd60e08f6" target="_blank">Hire me at Upwork</a>
     </p>
     <div class="footer">
       &copy; 2025 Filipe Rosenbrock
