--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
       color: #777;
     }
 
-    @media (min-width: 600px) {
+    /* Ajuste de margem para telas pequenas */
+    @media (max-width: 480px) {
       .container {
-        margin: 2rem;
-        width: auto;
+        margin: 0.5rem;
+        padding: 1rem;
       }
     }
   </style>
